data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_structure_StructureStrongholdPieces.Corridor.md
# StructureStrongholdPieces.Corridor

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureStrongholdPieces.Stronghold → net.minecraft.world.gen.structure.StructureStrongholdPieces.Corridor

## Class signature

```java
public static class StructureStrongholdPieces.Corridor extends StructureStrongholdPieces.Stronghold
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `static StructureBoundingBox func_74992_a(java.util.List p_74992_0_, java.util.Random p_74992_1_, int p_74992_2_, int p_74992_3_, int p_74992_4_, int p_74992_5_)`

## Fields

- `Corridor`
- `Corridor`